styles/app.css
/* ... */
body:not(
  [data-section-actuelle~="mes-chromatiques"],
  [data-section-actuelle~="pokedex"],
  [data-section-actuelle~="chasses-en-cours"],
  [data-section-actuelle~="corbeille"],
  [data-section-actuelle~="partage"],
  [data-section-actuelle~="chromatiques-ami"]
) nav {
  grid-template-rows: 1fr;
}

.lien-section,
.bouton-retour {
  cursor: pointer;
}

.lien-section > sync-progress,
.sous-titre > sync-line {
  position: absolute;
}

nav > a > span {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 90%;
}



/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!!!!! SECTIONS PRINCIPALES !!!!!!!!!!!!!!!!!!!
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/

main {
  grid-row: 1 / 2;
  grid-column: 1 / 2;
  overflow-x: hidden;
  overflow-y: hidden;
  position: relative;
  height: 100%;
}

section {
  display: none;
  overflow-anchor: none;
  height: 100%;
  overflow: hidden;
}

main > section {
  grid-template-rows: var(--section-title-height) auto;
}

main > section.on,
body[data-section-actuelle~="mes-chromatiques"] #mes-chromatiques,
body[data-section-actuelle~="pokedex"] #pokedex,
body[data-section-actuelle~="chasses-en-cours"] #chasses-en-cours,
body[data-section-actuelle~="corbeille"] #corbeille,
body[data-section-actuelle~="partage"] #partage,
body[data-section-actuelle~="chromatiques-ami"] #chromatiques-ami,
body[data-section-actuelle~="parametres"] #parametres,
body[data-section-actuelle~="a-propos"] #a-propos,
body[data-section-actuelle~="sprite-viewer"] #sprite-viewer,
body[data-section-actuelle~="filter-menu"] #filter-menu,
body[data-section-actuelle~="user-search"] #user-search,
body[data-section-actuelle~="top-layer"] #top-layer,
body[data-section-actuelle~="obfuscator"] #obfuscator {
  display: grid;
}

.section-titre {
  grid-row: 1 / 2;
  grid-column: 1 / 2;
  font-size: 1.5rem;
  font-weight: 400;
  padding: 8px 16px;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  gap: 8px;
  position: sticky;
  top: 0;
  z-index: var(--z-section-titre);
}

.spacer {
  flex-grow: 1;
}

.section-titre.with-button {
  padding-left: 0;
}

.section-titre search-box {
  display: none;
}

.titre-icones {
  display: flex;
  flex-direction: row;
  justify-content: end;
  align-items: center;
  gap: 8px;
  margin-left: auto;
}

a.icon-button.bouton-retour {
  margin: 8px;
  margin-right: 0;
}

.compteur {
	display: flex;
	justify-content: center;
	align-items: center;
  position: relative;
	min-width: 36px;
  height: 36px;
  box-sizing: border-box;
  padding: 8px;
	border-radius: 18px;
	letter-spacing: 0;
  gap: 2px;
}

#pokedex .compteur > span {
  opacity: .8;
}

#pokedex .compteur > .caught {
  opacity: 1;
}

.section-contenu {
  grid-row: 2 / 3;
  grid-column: 1 / 2;
  gap: 8px;
  padding: 8px;
  padding-top: 0;
  display: flex;
  flex-direction: column;
  overflow-x: hidden;
  overflow-y: auto;
  height: 100%;
  box-sizing: border-box;
  /*scrollbar-gutter: stable;*/
  container-type: inline-size;
}

/*body[data-section-actuelle~="obfuscator"] .section-contenu {
  overflow-y: hidden;
}*/

section.loading .compteur {
  display: none;
}


/*
 * FAB
 */

@keyframes fab-apparition {
  0% { transform: translate3D(0, calc(-1px * var(--notification-container-height, 0)), 0) scale(0); }
  100% { transform: translate3D(0, calc(-1px * var(--notification-container-height, 0)), 0) scale(1); }
}

.fab {
  display: none;
  grid-column: 1 / 2;
  grid-row: 1 / 2;
  position: fixed;
  z-index: var(--z-fab);
  bottom: var(--bottom-bar-height);
  right: 0;
  animation: fab-apparition .2s var(--easing-standard) .2s;
  animation-fill-mode: backwards;
  transform: translate3D(0, calc(-1px * var(--notification-container-height, 0)), 0) scale(1);
  transition: transform .3s var(--easing-standard),
              box-shadow .3s var(--easing-standard);
  --decalage: 0;
}

.fab.notif {
  --decalage: calc(-1 * var(--bottom-bar-height));
  transition: transform .15s var(--easing-decelerate);
}

@supports (selector(:has(*))) {
  body[data-section-actuelle~="mes-chromatiques"]:has(#mes-chromatiques:not(.loading)) .fab,
  body[data-section-actuelle~="pokedex"]:has(#pokedex:not(.loading)) .fab,
  body[data-section-actuelle~="chasses-en-cours"]:not([data-section-actuelle~="corbeille"]):has(#chasses-en-cours:not(.loading)) .fab,
  body[data-section-actuelle~="partage"]:has(#partage:not(.loading)) .fab {
    display: flex;
  }
}

@supports not (selector(:has(*))) {
  body[data-section-actuelle~="mes-chromatiques"] .fab,
  body[data-section-actuelle~="pokedex"] .fab,
  body[data-section-actuelle~="chasses-en-cours"]:not([data-section-actuelle~="corbeille"]) .fab,
  body[data-section-actuelle~="partage"] .fab {
    display: flex;
  }
}

#mes-chromatiques > .section-contenu,
#pokedex > .section-contenu,
#chasses-en-cours > .section-contenu,
#partage > .section-contenu {
  padding-bottom: calc(56px + 2 * 15px);
}



/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!!!!! CARTE D'UN POKÉMON !!!!!!!!!!!!!!!!!!!!!
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/

shiny-card + shiny-card,
hunt-card + hunt-card,
corbeille-card + corbeille-card {
  content-visibility: auto;
  contain-intrinsic-size: 100px 120px;
}

[data-rendered="hidden"] {
  content-visibility: hidden;
  contain: style layout paint;
}

[data-rendered="visible"] {
  content-visibility: visible;
  contain: style layout paint;
}

@supports not (content-visibility: hidden) {
  [data-rendered="hidden"] {
    visibility: hidden;
  }
  
  [data-rendered="visible"] {
    visibility: visible;
  }
}

.vide {
  height: 100%;
}

.message-vide-recherche,
.message-vide-filtres,
.message-vide {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr min-content min-content 1fr;
  font-size: 1.125rem;
  color: var(--text-color-soft);
  opacity: .5;
  flex-grow: 1;
  text-align: center;
  width: 60%;
  gap: 8px;
  align-self: center;
  justify-self: center;
}
/* ... */

